Archive2/e0/fa5769d7154280/output
main.cpp:19:16: error: use of undeclared identifier 'EOF'
    if (eof == EOF)
               ^
main.cpp:21:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
2 errors generated.
